src/objects/Weekly__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>本周销售机会总结</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>提交日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bgsxxts__c</fullName>
        <description>用于记录无客户服务，办公室工作天数。</description>
        <label>办公室天数</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bzhdzj__c</fullName>
        <label>本周活动总结</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccjh__c</fullName>
        <label>出差计划</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccts__c</fullName>
        <description>用于记录常驻地之外的城市工作天数。</description>
        <label>出差天数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>djjwtjjy__c</fullName>
        <label>待解决问题及建议</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <label>本周费用总额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>informant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>汇报上级</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBf3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jbts__c</fullName>
        <description>在周末及法定节假日工作的天数</description>
        <label>加班天数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kfzcts__c</fullName>
        <description>用于记录北京库房/香港库房，工作天数。</description>
        <label>库房支持天数</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>plan__c</fullName>
        <label>下周工作计划</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>problem__c</fullName>
        <label>本周遗留问题</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sngzts__c</fullName>
        <description>用于记录常驻地客户处工作天数。</description>
        <label>市内工作天数</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <description>用于记录周报当前状态。</description>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>已提交</fullName>
                </value>
                <value>
                    <fullName>已审核</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>本周总结</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>totlert__c</fullName>
        <label>有效人天合计</label>
        <summarizedField>daily__c.validnum__c</summarizedField>
        <summaryForeignKey>daily__c.weekly__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>txts__c</fullName>
        <label>调休天数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>weekend__c</fullName>
        <inlineHelpText>周结束时间为每周日</inlineHelpText>
        <label>周结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>weekstart__c</fullName>
        <inlineHelpText>周开始时间为每周一</inlineHelpText>
        <label>周开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xdjy__c</fullName>
        <label>心得经验分享</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xzywjh__c</fullName>
        <label>下周业务计划</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zdwcgzsx__c</fullName>
        <label>重点完成工作事项</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zywcdsx__c</fullName>
        <label>重要完成的事项</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>周报</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>informant__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>totlert__c</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>Fanzhibing</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>范志兵</value>
        </filters>
        <label>F范志兵</label>
    </listViews>
    <listViews>
        <fullName>chenbaolin</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>陈宝林</value>
        </filters>
        <label>C陈宝林</label>
    </listViews>
    <listViews>
        <fullName>chenhu</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>陈虎</value>
        </filters>
        <label>C陈虎</label>
    </listViews>
    <listViews>
        <fullName>chenwenchao</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>陈文超</value>
        </filters>
        <label>C陈文超</label>
    </listViews>
    <listViews>
        <fullName>guojiapeng</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>郭佳芃</value>
        </filters>
        <label>G郭佳芃</label>
    </listViews>
    <listViews>
        <fullName>jianghongze</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>姜鸿泽</value>
        </filters>
        <label>J姜鸿泽</label>
    </listViews>
    <listViews>
        <fullName>libo</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>李博</value>
        </filters>
        <label>L李博</label>
    </listViews>
    <listViews>
        <fullName>liuliqiang</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>刘里强</value>
        </filters>
        <label>L刘里强</label>
    </listViews>
    <listViews>
        <fullName>qiuhaiying</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>邱海英</value>
        </filters>
        <label>Q邱海英</label>
    </listViews>
    <listViews>
        <fullName>quanhufeng</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>权虎峰</value>
        </filters>
        <label>Q权虎峰</label>
    </listViews>
    <listViews>
        <fullName>sunmingyuan</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>孙明远</value>
        </filters>
        <label>S孙明远</label>
    </listViews>
    <listViews>
        <fullName>wenhaiming</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>文海明</value>
        </filters>
        <label>W文海明</label>
    </listViews>
    <listViews>
        <fullName>wuxi</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>吴溪</value>
        </filters>
        <label>W吴溪</label>
    </listViews>
    <listViews>
        <fullName>xiaojiujiang</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>weekstart__c</columns>
        <columns>weekend__c</columns>
        <columns>summary__c</columns>
        <columns>problem__c</columns>
        <columns>plan__c</columns>
        <columns>fee__c</columns>
        <columns>ccts__c</columns>
        <columns>jbts__c</columns>
        <columns>txts__c</columns>
        <columns>totlert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>肖九江</value>
        </filters>
        <label>X肖九江</label>
    </listViews>
    <nameField>
        <displayFormat>Week-{YYYY}{MM}-{000000}</displayFormat>
        <label>周报编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>周报</pluralLabel>
    <recordTypes>
        <fullName>RecordType441</fullName>
        <active>true</active>
        <label>技术周报</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType6661</fullName>
        <active>true</active>
        <label>常规技术周报</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>